fixed modal link, added wrapAround, changed 100vh css

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -122,7 +122,7 @@ body{
 }
 
 #home-image{
-    height: 100vh;
+    height: -webkit-fill-available;
     overflow: hidden;
     padding: 0px;
 }
